--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -33,16 +33,18 @@
 
 
         <form class="commentForm">
-          <textarea type="text" rows="4" cols="50" id="comment" data-id="{{post.id}}"
+          <textarea type="text" rows="4" cols="50" id="comment"
             placeholder="Write a comment to check availability."></textarea>
-          </br><button id="confirmComment" type="submit" onclick="newComment()">Post comment</button>
-          </br><button id="cancelComment" type="reset">Cancel</button>
+          </br>
+          <button type="button" class="confirmComment" data-id="{{this.id}}">Post
+            comment</button>
+          </br>
+          <button id="cancelComment" type="reset">Cancel</button>
         </form>
         <!-- Comment Card -->
-        {{#if comment}}
+        {{#if this.comment}}
         <div class="container is-fluid">
           <div class="notification mt-4 mb-0 is-primary has-text-weight-bold is-size-5 py-2">Comments</div>
-          {{#each comment}}
           <div class="card mt-2">
             <header class="card-header is-justify-content-end has-background-success">
               <div>
@@ -57,7 +59,7 @@
               </div>
             </div>
           </div>
-          {{/each}}
+          {{!-- {{/each}} --}}
         </div>
         {{/if}}
   </div>
